# move_to_happy

./: .env.example  .gitignore  .replit  CLAUDE.md  README.md  local_combined_states.csv  pyproject.toml  replit.md
.cursor/: settings.json
app/: run.sh
app/backend/: chat.py  enrichment.py  main.py  requirements.txt  sync_data.py
app/backend/static/: index.html
app/backend/static/assets/: index-B7fLnJeX.js  index-DXjXkZUG.css
app/frontend/: index.html  package-lock.json  package.json  playwright.config.ts
app/frontend/src/: App.tsx  api.ts  styles.css  types.ts
app/frontend/src/components/: CitySearch.tsx  CommunityCard.tsx  ConciergeMessage.tsx  ConciergeResultsPanel.tsx  DataChat.tsx  DataExplorer.tsx  EDAPage.tsx  PreferencePanel.tsx  ResultsMap.tsx  ScoreBars.tsx
app/frontend/src/components/eda/: CommunityOverview.tsx  CorrelationExplorer.tsx  DistributionChart.tsx  EconomicTax.tsx  GeoHeatmap.tsx  KPIStrip.tsx  LivabilityIndex.tsx  RankingTable.tsx  SafetyHealth.tsx  ScatterPlot.tsx  StateComparison.tsx
app/frontend/tests/: data-consistency.spec.ts
sagemaker/: iam.py
sagemaker/endpoint/: inference.py
sagemaker/processing/: processing_script.py
scripts/: 01_prepare_data.py  02_upload_to_s3.py  03_create_athena_database.py  04_register_csv_with_athena.py  05_convert_to_parquet.py  06_query_with_wrangler.py  07_create_redshift_cluster.py  08_load_into_redshift.py  09_query_with_spectrum.py  10_export_to_s3_parquet.py  11_run_processing_job.py  12_deploy_endpoint.py  13_test_endpoint.py  99_cleanup.py  _config.py  build_rag_index.py  run_lme_example.py  test_claude_integration.py
scripts/tier1/: 00_build_crosswalks.py  01_census_acs.py  02_noaa_climate.py  03_epa_air_quality.py  04_bls_employment.py  05_fcc_broadband.py  06_fbi_crime.py  07a_cms_hospitals.py  07b_cms_physicians.py  08_geocoder.py  09_geodistance.py  09b_backfill_distances.py  10_tax_rates.py  11_county_education.py  12_lake_distance.py  12b_backfill_lake_distances.py  _helpers.py
src/move_to_happy/: __init__.py
src/move_to_happy/ai/: __init__.py  claude_client.py  concierge.py  config.py  explanation.py  intake.py  lead_summary.py  prompts.py  schemas.py
src/move_to_happy/lme/: __init__.py  atl.py  constants.py  eliminators.py  engine.py  lifestyle.py  scoring.py  spillover.py  synthetic_housing.py  types.py
src/move_to_happy/rag/: __init__.py  chunker.py  config.py  embeddings.py  guardrails.py  indexer.py  retriever.py  s3_sync.py  types.py
src/move_to_happy/rag/loaders/: __init__.py  community.py  documents.py  economic.py  geospatial.py  health.py  hospital.py
tests/: test_placeholder.py
tests/ai/: test_guardrails.py  test_prompts.py
tests/rag/: test_chunker.py  test_indexer.py  test_retriever.py
